<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MyStocksActivity">
  <item android:id="@+id/action_change_units"
        android:icon="@drawable/ic_attach_money_white_24dp"
        android:orderInCategory="99"
        android:title="@string/dollarrep"
        app:showAsAction="always"
      />
    <item
        android:id="@+id/delete"
        android:icon="@drawable/ic_delete_forever_white_24dp"
        android:title="Delete a Stock "
        app:showAsAction="always"/>
  <item android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_refresh"

        android:icon="@drawable/ic_refresh_white_24dp"
        android:title="@string/refresh"
        app:showAsAction="always"/>
</menu>
