<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/icons"
    android:orientation="vertical"
    android:padding="10dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4">

        <com.github.mikephil.charting.charts.CombinedChart
            android:id="@+id/combinedChart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            ></com.github.mikephil.charting.charts.CombinedChart>
    </FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"

        android:layout_height="wrap_content">

        <SeekBar
            android:id="@+id/seekX"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_margin="8dp"
            android:layout_marginBottom="35dp"
            android:layout_marginRight="5dp"
            android:layout_toLeftOf="@+id/rangeX"
            android:max="0"
            android:paddingBottom="12dp"

            android:progress="100"/>


        <TextView
            android:id="@+id/rangeX"
            android:layout_width="50dp"
            android:layout_height="wrap_content"

            android:layout_alignParentRight="true"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="10dp"
            android:gravity="right"
            android:text="0"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/secondary_text"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/name"
            android:layout_width=
                "0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/stock_name"
            android:textColor="@color/primary_text"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/close"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/close"
            android:textColor="@color/primary_text"
            android:textSize="12sp"
            />

        <TextView
            android:id="@+id/date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/date"
            android:textColor="@color/primary_text"
            android:textSize="12sp"
            />

        <TextView
            android:id="@+id/highlow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/highlow"
            android:textColor="@color/primary_text"
            android:textSize="12sp"
            />

        <TextView
            android:id="@+id/volume"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/volume"
            android:textColor="@color/primary_text"
            android:textSize="12sp"
            />


    </LinearLayout>
</LinearLayout>


