<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/tools"
    android:id="@+id/mainview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/icons"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        />


    <FrameLayout
        android:id="@+id/recycer_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/icons"
      />

        <RelativeLayout
            android:id="@+id/hiddenpage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/icons"
            android:gravity="center"
            android:visibility="visible">

            <TextView
                android:id="@+id/nostocks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:paddingEnd="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingStart="10dp"
                android:textColor="@color/secondary_text"/>

            <Button
                android:id="@+id/prestocks"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nostocks"
                android:layout_centerHorizontal="true"
                android:layout_margin="10dp"
                android:clickable="true"
                android:contentDescription="@string/return_button_content"
                android:text="@string/returnback"
                android:textColor="@color/accent"

                />
        </RelativeLayout>
  <com.melnykov.fab.FloatingActionButton
      android:id="@+id/fab"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="bottom|right"
      android:layout_margin="16dp"
      android:contentDescription="@string/add_new_stock"
      android:src="@drawable/ic_add_white_24dp"
      fab:fab_colorNormal="@color/material_blue_500"
      fab:fab_colorPressed="@color/material_blue_600"
      fab:fab_colorRipple="@color/ripple"
      fab:fab_shadow="true"
      fab:fab_type="normal"
      fab:layout_anchor="recycler_view"
      fab:layout_anchorGravity="bottom | end"
      />
</FrameLayout>


</LinearLayout>
